<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dimitarduino.chatmobilni.MainActivity">
    <item
        android:id="@+id/skenirajQr"
        android:orderInCategory="100"
        android:title="@string/skenirajQr"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/promeniJazikMk"
        android:orderInCategory="100"
        android:title="@string/promeniJazikMk"
        app:showAsAction="never" />

    <item
        android:id="@+id/promeniJazikEn"
        android:orderInCategory="100"
        android:title="@string/promeniJazikEn"
        app:showAsAction="never"
        android:visible="false"
        />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never" />
</menu>