<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark"
    tools:context=".RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ChatMobilni.AppBarOverlay"
        android:visibility="gone"

        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:theme="@style/Theme.ChatMobilni.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/vratiNazad"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/back"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="36dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/purple_500"
                android:textStyle="bold"
                android:layout_marginLeft="10dp"
                android:textSize="28sp" />

    </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:textSize="36sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/naprajAkaunt"
            />
        <EditText
            android:id="@+id/username_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingVertical="11dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/account_input_bg"
            android:hint="@string/korisnickoIme"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/fullname_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:paddingVertical="11dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/account_input_bg"
            android:hint="@string/fullname"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/black"/>

        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingVertical="11dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/account_input_bg"
            android:hint="@string/emailadresa"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/black"
            />
        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:paddingVertical="11dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/account_input_bg"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/black"
            />

        <Spinner
            android:id="@+id/pol_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:background="@drawable/spinner_bg"
            />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_radius_bg"
            android:text="@string/signup"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />

    </LinearLayout>

</RelativeLayout>