<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationActivity">
    <ImageView
        android:id="@+id/vratiNazad"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/back" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:src="@drawable/icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/purple_500"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:textSize="28sp" />

    </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:textSize="32sp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/potvrdiAkaunt"
            />

        <EditText
            android:id="@+id/kod_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingVertical="11dp"
            android:paddingHorizontal="5dp"
            android:background="@drawable/account_input_bg"
            android:hint="@string/emailKod"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/black"
            />

        <Button
            android:id="@+id/potvrdiProfilBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_radius_bg"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            />
    </LinearLayout>
</RelativeLayout>